--- a/IceCoffee.WeChatSDK.MP/IceCoffee.WeChatSDK.MP.csproj
+++ b/IceCoffee.WeChatSDK.MP/IceCoffee.WeChatSDK.MP.csproj
@@ -4,8 +4,8 @@
 		<Authors>IceCoffee</Authors>
 		<Company>LuoShuiTianYi</Company>
 		<Copyright>Copyright (c) 2022 IceCoffee</Copyright>
-		<Description>The standard DataAnnotations localization</Description>
-		<GenerateDocumentationFile>false</GenerateDocumentationFile>
+		<Description>微信公众号软件开发工具包</Description>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 		<NoWarn>$(NoWarn);1591</NoWarn>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -14,7 +14,7 @@
 		<Product>IceCoffee</Product>
 		<RepositoryUrl>https://github.com/1249993110/IceCoffee.WeChatSDK.MP</RepositoryUrl>
 		<TargetFrameworks>net6.0;netcoreapp3.1</TargetFrameworks>
-		<Version>1.0.0.0</Version>
+		<Version>1.0.0.8</Version>
 	</PropertyGroup>
 
 
