--- a/IceCoffee.WeChatSDK.MP/IceCoffee.WeChatSDK.MP.csproj
+++ b/IceCoffee.WeChatSDK.MP/IceCoffee.WeChatSDK.MP.csproj
@@ -16,7 +16,7 @@
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 		<Product>IceCoffee</Product>
 		<RepositoryUrl>https://github.com/1249993110/IceCoffee.WeChatSDK.MP</RepositoryUrl>
-		<TargetFrameworks>net6.0;netcoreapp3.1</TargetFrameworks>
+		<TargetFrameworks>net6.0</TargetFrameworks>
 		<Version>1.0.1.3</Version>
 		<LangVersion>10.0</LangVersion>
 	</PropertyGroup>
