--- a/IceCoffee.WeChatSDK.MP/IceCoffee.WeChatSDK.MP.csproj
+++ b/IceCoffee.WeChatSDK.MP/IceCoffee.WeChatSDK.MP.csproj
@@ -8,7 +8,10 @@
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<!--取消方法注释警告-->
 		<NoWarn>$(NoWarn);1591</NoWarn>
+		<!--取消字段退出构造方法可空警告-->
+		<NoWarn>$(NoWarn);CS8618</NoWarn>
 		<Nullable>disable</Nullable>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
